@@ -1,5 +1,5 @@
 
-R version 2.9.0 Under development (unstable) (2009-02-15 r47923)
+R version 2.9.0 Under development (unstable) (2009-03-03 r48046)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -703,13 +703,15 @@ include omitted arguments in definition: mode = "missing"
 + 	  identical(matrix(1:6,ncol=2), as(n3, "matrix")))
 > ## partly failed at times in pre-2.8.0
 > 
-> ## "[" subsetting of "simple S4" classes:
-> for(bcl in c("list","integer","numeric")) {
+> if("S4_subsettable" == TRUE) { ## now (2.9.0) not thought to be a good idea
++ ## "[" subsetting of "simple S4" classes:
++ for(bcl in c("list","integer","numeric")) {
 +     setClass("C", contains= bcl)
 +     x <- new("C", 1:3); x <- x[2:3]
 +     stopifnot(is(x, "C"), is(rep(x, 3), "C"), is(rep.int(x, 2), "C"))
 + }
-> ## used to drop the class in 2.8.0 and earlier
++ ## used to drop the class in 2.8.0 and earlier
++ }
 > 
 > ##From "Michael Lawrence" <....@fhcrc.org>  To r-devel@r-project, 25 Nov 2008:
 > setGeneric("order", signature="...",
