@@ -202,6 +202,10 @@ NEW FEATURES
     o	ls.str() [via print method] now also works when some objects in
 	the environment are missing().
 
+    o	Subsetting S4-objects (without an explicit "[" method) no longer preserves
+	the class in cases like setClass("C", contains="list");
+	This reverts a "bug fix" activated R 2.8.0.
+
 
 DEPRECATED & DEFUNCT
 
@@ -759,6 +763,7 @@ BUG FIXES
 
     o	In setClass("C", contains="list"); x <- new("C", 1:3), x[2:3] now
         remains of class "C".  So does rep(x, 2) or rep.int(x, 3).
+	[NOTE: This "feature" has been reverted for R 2.9.0, see above]
 
     o	median.default() now also works for "numeric"-like vectors.
 
